k8s/deprecated_old/kong/kong-master-ingress.yaml
# kong-master-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-master-ingress
  namespace: ticketing
  annotations:
    konghq.com/plugins: ticketing-bot-detection, ratelimit 
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /kopis-api
        pathType: Prefix
        backend:
          service:
            name: ticket-backend-svc
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ticket-frontend-svc
            port:
              number: 80
