k8s/deprecated_old/kong/kong-test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-test-ingress
  namespace: ticketing
  annotations:
    konghq.com/plugins: ticketing-bot-detection, ticketing-rate-limit
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ticket-backend-svc
            port:
              number: 8000
