k8s/deprecated_old/kong/original-backup.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/backend-protocol":"HTTP","nginx.ingress.kubernetes.io/configuration-snippet":"proxy_set_header X-Real-IP $remote_addr;\nproxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;\n","nginx.ingress.kubernetes.io/rewrite-target":"/$2"},"name":"pulseticket-api-ingress","namespace":"default"},"spec":{"ingressClassName":"nginx","rules":[{"host":"www.pulseticket.ke","http":{"paths":[{" [...]
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Real-IP $remote_addr;
      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  creationTimestamp: "2026-03-18T11:24:19Z"
  generation: 2
  name: pulseticket-api-ingress
  namespace: ticketing
  resourceVersion: "2299900"
  uid: e859a53b-fdb0-42c4-91f6-91d5bf870d30
spec:
  ingressClassName: nginx
  rules:
  - host: www.pulseticket.ke
    http:
      paths:
      - backend:
          service:
            name: kong-bridge-svc
            port:
              number: 80
        path: /kopis-api(/|$)(.*)
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - pulseticket.ke
    - www.pulseticket.ke
    secretName: pulseticket-tls-secret
status:
  loadBalancer:
    ingress:
    - ip: 10.4.0.151
